--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,34 +1,13 @@
-/*#flyin{
-	width: 100%; 
-	margin-left: 50%; 
-	margin-top: 20%;"
-}*/
-
-/*!
- * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
-/* Global Styles */
-
-
 
 /* Side Menu */
 
-
-
-
-
-#optin-flyin-wrapper {
+.optin-flyin-display{
     z-index: 1000;
     position: fixed;
     right: 0;
-    bottom: -50%;
+    bottom: -100%;
     width: 250px;
-    height: 50%;
-    /*margin-right: -250px;*/
-    /*overflow-y: auto;*/
+    height: 50%;    
     background: #6083ab;
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
@@ -65,23 +44,22 @@
   line-height: 11px;
 
 }
+#stickytop-wrapper{ display: none;}
+#stickytop-wrapper.in{ display: block;}
 
-.stickytop-wrapper.affix{
+#stickytop-wrapper.affix{
+        top:0;
+        width: 100%;
+    }
 
-  top:0;
-  width: 100%;
-
-}
-
-.stickytop-wrapper {
+.stickytop-affix {
   
       padding: 20px 0;
-      background-color: rgba(96, 131, 171, 0.5);      
-      
+      background-color: rgba(96, 131, 171, 0.5);
       top: 0;
       left: 0;     
-      display: block;    
-    
+      width: 100%;
+      position: fixed;
       text-align: center;
       -webkit-box-shadow: -9px 28px 63px -34px rgba(0,0,0,0.84);
       -moz-box-shadow: -9px 28px 63px -34px rgba(0,0,0,0.84);
@@ -94,7 +72,7 @@
 
     border-radius: 30px;
     background-color: #fff;   
-    margin-top: 0px;
+    margin-top: 45px;
     margin-right: 10px;
 
 }
