--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,7 +211,7 @@
 }
 
 .modal-body {
-  padding: 0;
+  padding: 0!important;
 }
 
 .lightbox-optin-image {
@@ -281,21 +281,23 @@
 }
 
 
-#stickytop-wrapper.affix {
+#stickytop-wrapper{ display: none;}
+#stickytop-wrapper.in{ display: block;}
+
+#stickytop-wrapper{  
     position: fixed;
     top: 0;
     width: 100%;
+    height: 60px;
    
 }
-
-
 
 
 .stickytop-optin-image {
     width: 25%;
     float: left;
     background: #94CA66;
-    height: 134px;
+    height: 60px;
     position: relative;
 
 }
@@ -303,7 +305,7 @@
 
 .stickytop-optin-image img {
     position: absolute;
-    top: 15px;
+    top: 0;
     left: 24%;
 }
 
@@ -311,7 +313,7 @@
 .stickytop-optin-content {
     width: 30%;
     float: left;
-    padding: 30px 30px 20px 90px;
+    padding: 12px 38px 0 90px;
     position: relative;
     color: #fff;
 
@@ -332,7 +334,7 @@
   top: 0;
   left: 0;
   border-style: solid;
-  border-width: 67px 54px;
+  border-width: 30px 24px;
   border-color: transparent transparent transparent #94CA66;
 }
 
@@ -340,7 +342,7 @@
 #stickytop-close{
     border-radius: 30px;
     background-color: #fff;
-    margin-top: 100px;
+    margin-top: 44px;
     right: 0px;
 }
 
@@ -372,7 +374,7 @@ button#optin-stiky-email-button {
     right: 0;
     width: 330px;
     position: fixed;
-    height: 374px;
+    height: 343px;
     bottom: -100%;
     z-index: 1000;
     color: #fff;
