--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,8 @@
 
 /*lightbox style*/
+h2{
+  font-size: 22px !important;
+}
 
 div#optin-email-subcribe{
 
@@ -244,7 +247,7 @@ button#optin-stiky-email-button {
 
 .flyin-optin-mail{   
     float: left;
-    padding: 24px 43px 0;
+    padding: 24px 52px 0;
     position: relative;
    background: #475b65;
    text-align: center;
